src/Style/Style.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&family=Special+Elite&display=swap");
* {
  box-sizing: border-box;
}

.App {
  width: 100vw;
  min-height: 120vh;
  background-image: linear-gradient(rgba(39, 51, 107, 0.25), rgba(39, 51, 107, 0.25)), url("../Media/Nupar.jpg");
  background-repeat: no-repeat;
  object-fit: contain;
  min-height: 120vh;
  background-origin: border-box;
  background-attachment: fixed;
  background-size: auto 170vh;
  -webkit-background-size: auto 170vh;
  -moz-background-size: auto 170vh;
  -o-background-size: auto 170vh;
  background-position-x: 64%;
  background-position-y: 70%;
}

body {
  text-align: center;
  color: #f0f0f0;
}

.header {
  top: 0;
  height: 90px;
  flex: 0 0 90px;
  width: 100%;
}
.header li {
  font-family: "Special Elite", cursive;
}

.headerContainer {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.logo {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  height: 60px;
  width: 60px;
  margin: 15px;
  border: 2px solid white;
  color: #f0f0f0;
}
.logo p {
  font-family: "Special Elite", cursive;
  align-self: center;
  font-size: 2rem;
  padding-top: 10px;
}

.homeLink {
  text-decoration: none;
}

#menuToggle {
  display: block;
  position: relative;
  top: 33px;
  right: 33px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
  z-index: 100;
}

#menuToggle a {
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}

#menuToggle a:hover {
  text-decoration: underline;
}

#menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0;
  z-index: 2;
  -webkit-touch-callout: none;
}

#menuToggle span {
  display: block;
  width: 33px;
  height: 2px;
  margin-bottom: 8px;
  position: relative;
  background: white;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, 0px);
  background: #232323;
}

#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -2px);
}

#menuDrop {
  position: absolute;
  width: 170px;
  margin: -100px 0 0 -105px;
  padding: 40px;
  padding-top: 110px;
  background: white;
  list-style-type: none;
  text-align: right;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(0, -100%);
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
}

#menuDrop li {
  padding: 10px 0;
  font-size: 22px;
}

#menuToggle input:checked ~ ul {
  transform: none;
}

#menuBar {
  display: none;
}

@media (min-width: 800px) {
  #menuDrop {
    display: none;
  }

  #menuToggle {
    display: none;
  }

  #menuBar {
    display: flex;
  }

  #menuBar a {
    display: inline-block;
    text-decoration: none;
    color: #f0f0f0;
    font-size: 1.5rem;
    margin: 35px 15px 15px 15px;
  }

  #menuBar a:hover {
    text-decoration: underline;
  }
}
.hero {
  flex: 1 1 auto;
  width: 100vw;
  height: calc(100vh - 90px);
  text-align: left;
  padding-left: 50px;
  padding-right: 20px;
  padding-top: 130px;
}
.hero h1 {
  font-family: "Special Elite", cursive;
  font-size: 3rem;
}
.hero h2 {
  font-family: "Fira Sans", sans-serif;
  font-size: 1.5rem;
  padding-top: 10px;
  padding-bottom: 30px;
}

.lineOne {
  animation: slideInOne 1s cubic-bezier(0.35, 1.15, 0.72, 0.99);
  overflow: hidden;
}

@keyframes slideInOne {
  0% {
    padding-left: 100%;
  }
  100% {
    padding-left: 0;
  }
}
.lineTwo {
  animation: slideInTwo 2s cubic-bezier(0.35, 1.15, 0.72, 0.99);
  overflow: hidden;
}

@keyframes slideInTwo {
  0% {
    padding-left: 100%;
  }
  33% {
    padding-left: 100%;
  }
  100% {
    padding-left: 0;
  }
}
.lineThree {
  animation: slideInThree 3s cubic-bezier(0.35, 1.15, 0.72, 0.99);
  overflow: hidden;
}

@keyframes slideInThree {
  0% {
    padding-left: 100%;
  }
  50% {
    padding-left: 100%;
  }
  100% {
    padding-left: 0;
  }
}
@media (min-width: 480px) {
  .hero {
    padding-left: 70px;
  }
  .hero h1 {
    font-size: 3.5rem;
  }
  .hero h2 {
    font-size: 1.8rem;
  }
}
@media (min-width: 800px) {
  .hero {
    padding-left: 120px;
  }
  .hero h1 {
    font-size: 4rem;
  }
  .hero h2 {
    font-size: 2rem;
  }
}
.work {
  margin-top: 5px;
  margin-bottom: 20px;
  padding-top: 50px;
  padding-bottom: 50px;
}
.work h3 {
  font-family: "Special Elite", cursive;
  font-size: 2.2rem;
  margin-bottom: 30px;
}
.work h4 {
  font-family: "Special Elite", cursive;
  font-size: 1.2rem;
  margin-bottom: 30px;
}

.workFlex {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
}

.workContainer {
  margin: 30px auto;
}

.workImg {
  width: 300px;
}

.wrapImage {
  position: relative;
}
.wrapImage::before, .wrapImage::after {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -1;
  border: 2px solid #f0f0f0;
  transition: all 0.25s ease-out;
}
.wrapImage::before {
  background-color: #f0f0f0;
  top: -10px;
  left: -10px;
}
.wrapImage::after {
  bottom: -10px;
  right: -10px;
}
.wrapImage:hover::before {
  top: 15px;
  left: 15px;
}
.wrapImage:hover::after {
  bottom: 15px;
  right: 15px;
}

@media (min-width: 480px) {
  .workImg {
    width: 420px;
  }
}
@media (min-width: 800px) {
  .workFlex {
    flex-flow: row wrap;
    justify-content: space-around;
  }

  .workContainer {
    margin: 30px 40px 30px 30px;
  }

  .workImg {
    width: 500px;
  }
}
.workDisplay {
  height: auto;
  width: 100vw;
  background: rgba(39, 51, 107, 0.75);
  padding: 50px 30px 30px 30px;
}
.workDisplay h2 {
  font-family: "Special Elite", cursive;
  font-size: 2em;
  padding-bottom: 20px;
}
.workDisplay .workDisplayText {
  text-align: left;
  padding: 0 30px 30px 30px;
  line-height: 1.4;
  font-family: "Fira Sans", sans-serif;
}
.workDisplay h4 {
  font-family: "Special Elite", cursive;
  font-size: 1.5em;
  padding: 15px;
}
.workDisplay .techsList {
  text-align: center;
  padding: 0 30px;
  line-height: 1.4;
  font-family: "Fira Sans", sans-serif;
}

.iframeContainer {
  position: relative;
  overflow: hidden;
  width: 300px;
  margin: 15px auto;
  aspect-ratio: 16/9;
}

.responsiveIframe {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@media (min-width: 480px) {
  .iframeContainer {
    width: 400px;
  }
}
@media (min-width: 800px) {
  .workDisplay {
    height: calc(100vh - 75px);
  }

  .workDisplayText {
    width: 500px;
    margin: 0 auto;
  }

  .techsList {
    width: 500px;
    margin: 0 auto;
  }
}
@media (min-width: 1000px) {
  .workDisplayFlex {
    margin: 0 auto;
    max-width: 1300px;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-start;
  }

  .workDisplayText {
    margin: 10px;
    order: 0;
  }

  .iframeContainer {
    margin: 10px;
    width: 400px;
    margin: 0;
    order: 1;
  }

  .techContainer {
    margin: auto 0;
    width: 400px;
    order: 4;
  }

  .techsList {
    width: 400px;
  }

  .imageSliderContainer {
    margin: 20px;
    order: 3;
    width: 500px;
  }
}
a {
  cursor: pointer;
}

.imageSlider {
  position: relative;
  object-fit: contain;
  width: 300px;
  margin: 0 auto 15px auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
}
.imageSlider .image {
  height: 150px;
  width: auto;
  display: relative;
  opacity: 1;
  transition: 0.5s ease;
}
.imageSlider .prevArrow {
  position: absolute;
  top: 40%;
  left: -20px;
  padding: 3px 10px;
  font-size: 2rem;
  cursor: pointer;
  user-select: none;
  z-index: 10;
}
.imageSlider .nextArrow {
  position: absolute;
  top: 40%;
  right: -20px;
  padding: 3px 10px;
  font-size: 2rem;
  cursor: pointer;
  user-select: none;
  z-index: 10;
}
.imageSlider .slide {
  opacity: 0;
  transition: 1s ease-in-out;
}
.imageSlider .slide.active {
  opacity: 1;
  transition: 1s;
  transform: scale(1.05);
}

@media (min-width: 480px) {
  .imageSlider {
    width: 400px;
  }
  .imageSlider .image {
    height: 200px;
  }
  .imageSlider .prevArrow {
    top: 40%;
    left: -20px;
  }
  .imageSlider .nextArrow {
    top: 40%;
    right: -20px;
  }
}
@media (min-width: 1000px) {
  .imageSlider {
    width: 500px;
  }
  .imageSlider .image {
    height: 250px;
  }
}
.clickthrough {
  margin: 20px auto;
}

.about {
  height: auto;
  background: rgba(39, 51, 107, 0.75);
  padding: 50px 30px;
}
.about h2 {
  font-family: "Special Elite", cursive;
  font-size: 2em;
  padding-bottom: 20px;
}
.about .aboutText {
  text-align: left;
  padding: 0 30px;
  line-height: 1.4;
}
.about .aboutText p {
  font-family: "Fira Sans", sans-serif;
}

.centerBtn {
  text-align: center;
  margin-top: 10px;
}

.resumeLink {
  margin: 0 auto;
  text-decoration: none;
  color: #f0f0f0;
  font-family: "Fira Sans", sans-serif;
  padding: 8px;
  border: 2px transparent solid;
}

.resumeLink:hover {
  border: 2px #f0f0f0 solid;
}

.linkedInLink {
  color: #f0f0f0;
}

.contactLink {
  color: #f0f0f0;
}

@media (min-width: 800px) {
  .aboutText {
    width: 500px;
    margin: 0 auto;
  }
}
.contact {
  width: 100vw;
  height: calc(100vh - 210px);
  background: rgba(39, 51, 107, 0.75);
  padding: 30px;
}
.contact h2 {
  font-family: "Special Elite", cursive;
  font-size: 2rem;
}
.contact .emailMe {
  font-family: "Special Elite", cursive;
  text-decoration: none;
  color: #f0f0f0;
}

.footer {
  background: rgba(39, 51, 107, 0.75);
  box-sizing: border-box;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-content: center;
  height: auto;
  padding-top: 30px;
  padding-bottom: 20px;
}
.footer .titleContainer {
  display: block;
  text-align: center;
}
.footer .titleContainer h4 {
  display: inline-block;
  font-family: "Special Elite", cursive;
  font-size: 1.5rem;
  text-align: center;
  padding: 10px 10px 6px 10px;
  border: 2px transparent solid;
}
.footer .titleContainer .icon {
  height: 50px;
  color: #f0f0f0;
  margin: 10px;
}

.nameLink {
  text-decoration: none;
  color: #f0f0f0;
}
.nameLink:hover h4 {
  border: 2px #f0f0f0 solid;
}

/*# sourceMappingURL=Style.css.map */

